feat: Enhance token management in CloudStatusManager for status push and command polling